--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -14,8 +14,6 @@ p {
     margin-bottom: 1.3em;
 }
 
-
-
 h1 {
   margin-top: 0;
   font-size: 2.441em;
@@ -35,12 +33,7 @@ h4 {font-size: 1.25em;}
   }
 
 }
-.lighter-heading{
-  font-weight: 300;
-  color: $light-grey;
-  line-height: 1;
-  margin: 0 0 60px 0;
-}
+
 code {
     font-family: "Roboto Mono", monospace;
     margin-bottom: 1.3em;
@@ -50,10 +43,19 @@ blockquote {
     font-size: 1.32em;
     font-style: italic;
 }
-
+a, a:hover{
+  text-decoration: none;
+}
+.lighter-heading{
+  font-weight: 300;
+  color: $light-grey;
+  line-height: 1;
+  margin: 0 0 60px 0;
+}
 .accent {
     color: $accent;
 }
+
 
 .smaller {
     font-size: 0.707em;
